Adds colors, images, and some more layout

--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
 
 		<link href="css/vendor/skeleton/layout.css" type="text/css" rel="stylesheet" />
 		<link href="css/vendor/skeleton/skeleton.css" type="text/css" rel="stylesheet" />
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 		<link href="css/core/style.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<header>
 			<div class="container">
-				<h1><img src="img/logo.png"/>Full Sail University</h1>
+				<img src="img/logo.png"/>
+				<h1>Full Sail University</h1>
 			</div>
 			<!-- H1 Put Logo Here -->
 		</header>
-		<div class="container">
-			<div>
-				<h1>Degree Name</h1>
-				<span>Bachelor's Degree - </span><span>Online</span>
-			</div>
-		</div>
-		<div>
+		<div class="degree-overview">
 			<div class="container">
-				<div class="column two-thirds alpha">
+				<div class="degree-name">
+					<h1>Degree Name</h1>
+					<span>Bachelor's Degree - </span><span>Online</span>
+				</div>
+				<div class="column two-thirds alpha degree-description">
 					<h2>Proin gravida nibh vel velit auctor aliquet.</h2>
 					<p>
 						Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
@@ -36,7 +37,7 @@
 						Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
 					</p>
 				</div>
-				<div class="column one-third omega">
+				<div class="column one-third omega request-info">
 					<h2>Request Info</h2>
 					<form>
 						<label for="firstname">First Name:</label>
@@ -306,11 +307,11 @@
 						By submitting this form, I give consent to Full Sail University and its partners (RMCAD and LA Film School) to contact me by telephone (including autodialed and prerecorded messages) at the number I have provided to receive information about Full Sail's offerings. I understand that this consent is not required in order to enroll.
 					</p>
 				</div>
+				<h2>Areas of Focus</h2>
 			</div>
 		</div>
-		<div>
+		<div class="areas-of-focus">
 			<div class="container">
-				<h2>Areas of Focus</h2>
 				<div class="row">
 					<div class="column one-third alpha">
 						<!-- img - border radius, border, background color, width, and height -->
@@ -340,7 +341,7 @@
 			</div>
 		</div>
 		<!-- DIV -->
-		<div>
+		<div class="online-experience">
 			<!-- jQuery Slider -->
 			<div class="container">
 				<h2>The Full Sail Online Experience</h2>
@@ -438,7 +439,7 @@
 			</div>
 		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script type="text/javascript" src="/js/core/main.js"></script>
+		<script type="text/javascript" src="js/core/main.js"></script>
 
 	</body>
 </html>
