--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			<!-- H1 Put Logo Here -->
 		</header>
 		<div class="degree-overview">
+			<div id="main-feature">
+				<img src="img/feature.jpg" />
+			</div>
 			<div class="container">
 				<div class="degree-name">
 					<h1>Degree Name</h1>
@@ -56,7 +59,6 @@
 						<select name="country" id="country">
 							<option value="" selected="selected">Select Country</option>
 							<option value="United States">United States</option>
-							<option value="United Kingdom">United Kingdom</option>
 							<option value="Afghanistan">Afghanistan</option>
 							<option value="Albania">Albania</option>
 							<option value="Algeria">Algeria</option>
@@ -307,6 +309,8 @@
 						By submitting this form, I give consent to Full Sail University and its partners (RMCAD and LA Film School) to contact me by telephone (including autodialed and prerecorded messages) at the number I have provided to receive information about Full Sail's offerings. I understand that this consent is not required in order to enroll.
 					</p>
 				</div>
+			</div>
+			<div class="container">
 				<h2>Areas of Focus</h2>
 			</div>
 		</div>
