Adds style fr the degree title. Also cleans up form styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="container">
 				<div class="degree-name">
 					<h1>Degree Name</h1>
-					<span>Bachelor's Degree - </span><span>Online</span>
+					<p>Bachelor's Degree - <span>Online</span></p>
 				</div>
 				<div class="column two-thirds alpha degree-description">
 					<h2>Proin gravida nibh
