Adds image replacement for select dropdown

--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
 			</div>
 		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script type="text/javascript" src="bower_components/slidr/slidr.min.js"></script>
 		<script type="text/javascript" src="js/core/main.js"></script>
 
 	</body>
