Adds slider, still has sizing issue

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 			<div class="container">
 				<div class="degree-name">
 					<h1>Degree Name</h1>
-					<p>Bachelor's Degree - <span>Online</span></p>
+					<p>
+						Bachelor's Degree - <span>Online</span>
+					</p>
 				</div>
 				<div class="column two-thirds alpha degree-description">
 					<h2>Proin gravida nibh
@@ -360,7 +362,7 @@
 			<div class="container">
 				<h2>The Full Sail Online Experience</h2>
 				<ul id="slidr-ul" style="display: inline">
-					<li data-slidr="one" class="row">
+					<li data-slidr="one">
 						<img class="eight columns alpha" src="img/macbook-pro.png" />
 						<div class="eight columns omega">
 							<h3>Your Mac Laptop</h3>
