Adds more text styling/layout spacing. Fixes size issue with slidr, controls not styled/positioned yet.

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<h2>Areas of Focus</h2>
+			<h2 class="areas-of-focus-heading">Areas of Focus</h2>
 		</div>
 		<div class="areas-of-focus">
 			<div class="container">
@@ -360,11 +360,11 @@
 		<div class="online-experience">
 			<!-- jQuery Slider -->
 			<div class="container">
-				<h2>The Full Sail Online Experience</h2>
 				<ul id="slidr-ul" style="display: inline">
 					<li data-slidr="one">
 						<img class="eight columns alpha" src="img/macbook-pro.png" />
 						<div class="eight columns omega">
+							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
 							<span>Project Launchbox &trade;*</span>
 							<ul>
@@ -383,6 +383,7 @@
 					<li data-slidr="two" class="row">
 						<img class="eight columns alpha" src="img/macbook-pro.png" />
 						<div class="eight columns omega">
+							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
 							<span>Project Launchbox &trade;*</span>
 							<ul>
@@ -401,6 +402,7 @@
 					<li data-slidr="three" class="row">
 						<img class="eight columns alpha" src="img/macbook-pro.png" />
 						<div class="eight columns omega">
+							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
 							<span>Project Launchbox &trade;*</span>
 							<ul>
@@ -419,6 +421,7 @@
 					<li data-slidr="four" class="row">
 						<img class="eight columns alpha" src="img/macbook-pro.png" />
 						<div class="eight columns omega">
+							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
 							<span>Project Launchbox &trade;*</span>
 							<ul>
