--- a/index.html
+++ b/index.html
@@ -322,7 +322,11 @@
 			</div>
 		</div>
 		<div class="container">
-			<h2 class="areas-of-focus-heading">Areas of Focus</h2>
+			<div class="areas-of-focus-heading row">
+				<img class="column one-third alpha" src="img/aof-line.png" />
+				<h2 class="column one-third ">Areas of Focus</h2>
+				<img class="column one-third omega" src="img/aof-line.png" />
+			</div>
 		</div>
 		<div class="areas-of-focus">
 			<div class="container">
