Adds changes from HTML5 Validator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 	<head>
 
@@ -17,14 +17,13 @@
 	<body>
 		<header>
 			<div class="container">
-				<img src="img/logo.png"/>
+				<img src="img/logo.png" alt="Full Sail University Logo"/>
 				<h1>Full Sail University</h1>
 			</div>
-			<!-- H1 Put Logo Here -->
 		</header>
 		<div class="degree-overview">
 			<div id="main-feature">
-				<img src="img/feature.jpg" />
+				<img src="img/feature.jpg" alt="Car parked near a beach." />
 			</div>
 			<div class="container">
 				<div class="degree-name">
@@ -60,7 +59,7 @@
 						<input name="Phone Number" type="tel" id="phonenumber"/>
 
 						<label for="country">Country:</label>
-						<select id="country" placeholder="Select a country...">
+						<select id="country">
 							<option value="">Select a country...</option>
 							<option value="AF">Afghanistan</option>
 							<option value="AX">&Aring;land Islands</option>
@@ -323,16 +322,15 @@
 		</div>
 		<div class="container">
 			<div class="areas-of-focus-heading row">
-				<img class="column one-third alpha" src="img/aof-line.png" />
+				<img class="column one-third alpha" src="img/aof-line.png" alt="Line"/>
 				<h2 class="column one-third ">Areas of Focus</h2>
-				<img class="column one-third omega" src="img/aof-line.png" />
+				<img class="column one-third omega" src="img/aof-line.png" alt="Line"/>
 			</div>
 		</div>
 		<div class="areas-of-focus">
 			<div class="container">
 				<div class="row">
 					<div class="column one-third alpha">
-						<!-- img - border radius, border, background color, width, and height -->
 						<img src="img/area-of-focus1.png" alt="Bar Graph" title="Icon representing a bar graph"/>
 						<h3>Area of Focus</h3>
 						<p>
@@ -340,7 +338,6 @@
 						</p>
 					</div>
 					<div class="column one-third">
-						<!-- img - border radius, border, background color, width, and height -->
 						<div class="img-container">
 							<img src="img/area-of-focus2.png" alt="Speech Bubbles" title="Icon representing two speech bubbles"/>
 						</div>
@@ -350,7 +347,6 @@
 						</p>
 					</div>
 					<div class="column one-third omega">
-						<!-- img - border radius, border, background color, width, and height -->
 						<img src="img/area-of-focus3.png" alt="Circle Graph" title="Icon representing a circle graph"/>
 						<h3>Area of Focus</h3>
 						<p>
@@ -360,13 +356,12 @@
 				</div>
 			</div>
 		</div>
-		<!-- DIV -->
 		<div class="online-experience">
 			<!-- jQuery Slider -->
 			<div class="container">
 				<ul id="slidr-ul" style="display: inline">
 					<li data-slidr="one">
-						<img class="eight columns alpha" src="img/macbook-pro.png" />
+						<img class="eight columns alpha" src="img/macbook-pro.png" alt="Macbook Pro"/>
 						<div class="eight columns omega">
 							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
@@ -376,16 +371,16 @@
 									Learn and create from anywhere
 								</li>
 								<li>
-									Features powerful media creation software
+									Features powerful media creation software
 								</li>
 								<li>
-									Allows for a media-rich learning experience
+									Allows for a media-rich learning experience
 								</li>
 							</ul>
 						</div>
 					</li>
 					<li data-slidr="two" class="row">
-						<img class="eight columns alpha" src="img/macbook-pro.png" />
+						<img class="eight columns alpha" src="img/macbook-pro.png" alt="Macbook Pro"/>
 						<div class="eight columns omega">
 							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
@@ -395,16 +390,16 @@
 									Learn and create from anywhere
 								</li>
 								<li>
-									Features powerful media creation software
+									Features powerful media creation software
 								</li>
 								<li>
-									Allows for a media-rich learning experience
+									Allows for a media-rich learning experience
 								</li>
 							</ul>
 						</div>
 					</li>
 					<li data-slidr="three" class="row">
-						<img class="eight columns alpha" src="img/macbook-pro.png" />
+						<img class="eight columns alpha" src="img/macbook-pro.png" alt="Macbook Pro"/>
 						<div class="eight columns omega">
 							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
@@ -414,16 +409,16 @@
 									Learn and create from anywhere
 								</li>
 								<li>
-									Features powerful media creation software
+									Features powerful media creation software
 								</li>
 								<li>
-									Allows for a media-rich learning experience
+									Allows for a media-rich learning experience
 								</li>
 							</ul>
 						</div>
 					</li>
 					<li data-slidr="four" class="row">
-						<img class="eight columns alpha" src="img/macbook-pro.png" />
+						<img class="eight columns alpha" src="img/macbook-pro.png" alt="Macbook Pro"/>
 						<div class="eight columns omega">
 							<h2>The Full Sail Online Experience</h2>
 							<h3>Your Mac Laptop</h3>
@@ -433,10 +428,10 @@
 									Learn and create from anywhere
 								</li>
 								<li>
-									Features powerful media creation software
+									Features powerful media creation software
 								</li>
 								<li>
-									Allows for a media-rich learning experience
+									Allows for a media-rich learning experience
 								</li>
 							</ul>
 						</div>
@@ -447,21 +442,21 @@
 		<footer>
 			<div class="container">
 				<p>
-					* Project LaunchBox™ is a degree-specific technology package that is made available to students at a deep institutional discount. In an effort to make the most current technology available to its students, Full Sail reserve s the right to replace equipment in the student technology package in favor of newer models.
+					&#42; Project LaunchBox&trade; is a degree-specific technology package that is made available to students at a deep institutional discount. In an effort to make the most current technology available to its students, Full Sail reserve s the right to replace equipment in the student technology package in favor of newer models.
 				</p>
 				<p>
-					For more information about Full Sail's programs, courses, and studios, as well as details about financial aid and career development, please visit our website at <a href="#">www.fullsail.edu</a> 3300 University Blvd · Winter Park, FL 32792 · Financial aid available for those who qualify · Career development assistance · Accredited University, ACCSC
+					For more information about Full Sail's programs, courses, and studios, as well as details about financial aid and career development, please visit our website at <a href="#">www.fullsail.edu</a> 3300 University Blvd &middot; Winter Park, FL 32792 &middot; Financial aid available for those who qualify &middot; Career development assistance &middot; Accredited University, ACCSC
 				</p>
 				<p>
 					Other product and company names mentioned herein may be the trademarks of their respective owners.
 					The appearance of these marks does not necessarily indicate a formalized sponsorship or affiliation with other such companies.
-					© 2013 Full Sail, LLC. All rights reserved. The terms "Full Sail," "Full Sail University," "If you're serious about your dream, we'll take your dream seriously,"
+					&copy; 2013 Full Sail, LLC. All rights reserved. The terms "Full Sail," "Full Sail University," "If you're serious about your dream, we'll take your dream seriously,"
 					"Full Sail Real World Education," and the Full Sail logo are either registered service marks or services marks of Full Sail, LLC.
 				</p>
 				<a href="#">Click Here for Privacy Policy</a> | <a href="#">Click here for outcomes and statistics</a>
 			</div>
 		</footer>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/slidr/slidr.min.js"></script>
 		<script type="text/javascript" src="js/core/main.js"></script>
 
